# zoomify

./: .coverage  .gitignore  README.md  main.py  menu.py  pyproject.toml  requirements.md
src/: google_api.py  meeting_data.json  zoomify.py
src/g_sheets/: google_api.py  meeting_data.json
tests/: exit_menu_sim.txt  login_and_exit.txt  login_report_exit_sim.txt  login_report_sheets_sim.txt  test_google_api.py  test_menu.py  test_zoomify.py
