[tool.poetry]
name = "zoomify"
version = "0.1.0"
description = ""
authors = ["Isaiah Burkes <idkburkes@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.0.1"
requests = "^2.27.1"
Authlib = "^0.15.5"
click = "^8.0.3"
colorama = "^0.4.4"
python-dotenv = "^0.19.2"
pyfiglet = "^0.8.post1"
pygsheets = "^2.0.5"
pandas = "^1.4.1"
pytest-cov = "^3.0.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
